fix h1 font size and home alignment

--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -550,7 +550,7 @@ h6 .small {
 
 h1,
 .h1 {
-  font-size: 36px;
+  font-size: 33px;
 }
 
 h2,
