--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -237,6 +237,7 @@ a:hover {
     -moz-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid rgba(160, 140, 120, 1);
+    text-align: left;
 }
 
 #intro .ticker {
